--- a/portfolio/designProjects.json
+++ b/portfolio/designProjects.json
@@ -1,43 +1,43 @@
 [
   {
     "title": "Education Center",
-    "img": "./assets/projects/educenter.png",
+    "img": "https://rakeshkanna-rk.github.io/database/portfolio/img/projects/educenter.png",
     "link": "https://www.behance.net/gallery/178610739/Education-Center-A-Learning-app-Case-study",
     "desc": [
-      "An intuitive online learning platform concept designed for mobile-first experiences.",
-      "Features smooth onboarding, accessible course navigation, and user progress tracking.",
-      "Crafted with engaging visuals and a structured layout for better learning flow."
+      "A mobile-first learning app UI focused on simplicity and engagement.",
+      "Designed key flows including onboarding, course browsing, and progress tracking.",
+      "Used a clean color palette and friendly visuals to enhance user experience."
     ],
     "tags": ["Figma", "Notion", "UI/UX", "App Design"],
     "type": " 🎨 Designing"
   },
   {
-    "title": "Instagram for Vision Pro",
-    "img": "./assets/projects/visionpro.png",
-    "link": "https://www.behance.net/gallery/178698351/Apple-Vision-Pro-Instagram-UI",
-    "desc": [
-      "Futuristic UI concept for Instagram tailored for Apple Vision Pro.",
-      "Explores spatial interaction design with immersive post viewing and 3D interface layering.",
-      "Focuses on gesture control and floating UI components for next-gen UX."
-    ],
-    "tags": ["Figma", "UI/UX", "Apple", "App Design", "Instagram"],
-    "type": " 🎨 Designing"
-  },
-  {
     "title": "Travel Guy",
-    "img": "./assets/projects/travelguy.png",
+    "img": "https://rakeshkanna-rk.github.io/database/portfolio/img/projects/travelguy.png",
     "link": "https://www.behance.net/gallery/188872021/Travel-Guy-Tourism-Website-Landing-Page-Design",
     "desc": [
-      "Landing page design for a vibrant and modern travel company.",
-      "Highlights featured destinations with vivid visuals and user-focused sections.",
-      "Crafted for desktop and mobile views using a grid-based layout and clean typography."
+      "Landing page concept for a modern travel and tourism website.",
+      "Focused on visual storytelling using high-quality imagery and vibrant layout.",
+      "Designed sections for featured destinations, packages, and user testimonials."
     ],
     "tags": ["Figma", "Notion", "UI/UX", "Web Design"],
     "type": " 🎨 Designing"
   },
   {
+    "title": "Instagram for Vision Pro",
+    "img": "https://rakeshkanna-rk.github.io/database/portfolio/img/projects/visionpro.png",
+    "link": "https://www.behance.net/gallery/178698351/Apple-Vision-Pro-Instagram-UI",
+    "desc": [
+      "Concept UI for Instagram on Apple Vision Pro.",
+      "Adapted the experience to spatial interfaces and 3D interactions.",
+      "Emphasized gesture-based navigation and immersive content viewing."
+    ],
+    "tags": ["Figma", "UI/UX", "Apple", "App Design", "Instagram"],
+    "type": " 🎨 Designing"
+  },
+  {
     "title": "Glass Morphism Icons",
-    "img": "./assets/projects/glassmorphismicons.png",
+    "img": "https://rakeshkanna-rk.github.io/database/portfolio/img/projects/glassicons.png",
     "link": "https://www.behance.net/gallery/188872021/Travel-Guy-Tourism-Website-Landing-Page-Design",
     "desc": [
       "A stylish set of UI icons designed with glassmorphism aesthetics.",
