--- a/portfolio/codeProjects.json
+++ b/portfolio/codeProjects.json
@@ -2,7 +2,7 @@
   {
     "title": "EzyDB",
     "img": "https://rakeshkanna-rk.github.io/database/portfolio/img/projects/ezydb.png",
-    "link": "https:github.com/EzyCode/EzyDB",
+    "link": "https://github.com/ezycode-org/EzyDB",
     "desc": [
       "A lightweight, file-based NoSQL database system built with Python.",
       "Designed for developers who need quick and easy data storage without server setup.",
@@ -14,7 +14,7 @@
   {
     "title": "DarkEST",
     "img": "https://rakeshkanna-rk.github.io/database/portfolio/img/projects/darkest.png",
-    "link": "https:github.com/rakeshkanna-rk/DarkEST",
+    "link": "https://github.com/rakeshkanna-rk/darkest",
     "desc": [
       "A visually soothing dark theme for Visual Studio Code.",
       "Crafted to reduce eye strain during long development sessions.",
@@ -26,7 +26,7 @@
   {
     "title": "Pip Creator",
     "img": "https://rakeshkanna-rk.github.io/database/portfolio/img/projects/pipcreator.png",
-    "link": "https://github.com/rakeshkanna-rk/PipCreator",
+    "link": "https://github.com/rakeshkanna-rk/pipCreator",
     "desc": [
       "CLI tool to help developers quickly generate and publish Python packages.",
       "Automates setup file creation, versioning, and structure generation.",
@@ -38,8 +38,8 @@
   {
     "title": "Code Editor",
     "img": "https://rakeshkanna-rk.github.io/database/portfolio/img/projects/codeeditor.png",
-    "link": "https://github.com/rakeshkanna-rk/CodeEditor",
-    "web": "https://rakeshkanna-rk.github.io/CodeEditor/",
+    "link": "https://github.com/rakeshkanna-rk/Code-Editor",
+    "web": "https://rakeshkanna-rk.github.io/Code-Editor/",
     "desc": [
       "A simple, lightweight in-browser code editor built with vanilla JS.",
       "Supports HTML, CSS, and JS preview with real-time updates.",
@@ -51,8 +51,8 @@
   {
     "title": "Markdown Editor",
     "img": "https://rakeshkanna-rk.github.io/database/portfolio/img/projects/markdowneditor.png",
-    "link": "https://github.com/rakeshkanna-rk/MarkdownEditor",
-    "web": "https://rakeshkanna-rk.github.io/MarkdownEditor/",
+    "link": "https://github.com/rakeshkanna-rk/Markdown-Editor",
+    "web": "https://rakeshkanna-rk.github.io/Markdown-Editor/",
     "desc": [
       "A minimal markdown editor that renders live preview as you type.",
       "Clean UI for distraction-free writing and formatting.",
